src/objects/peer__Bank_Recon_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>peer__Account_ID_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <label>Account ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Auto_Create_Recon_Transaction__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Loan Payment &amp; Investor Fund transactions will be auto-created when the bank statement is parsed.</inlineHelpText>
        <label>Auto Create Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Account_Number_Field__c</fullName>
        <label>Bank Account Number Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Parser__c</fullName>
        <inlineHelpText>This class must implement the IBankStatementParser interface. It returns all the transactions present in a bank statement file in the form of a BTransaction.</inlineHelpText>
        <label>Bank Statement Parser</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Enable_Loan_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Loan Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Handle_Only_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Checked, system only handles exception bank statement records &amp; ignores reconciled records.</inlineHelpText>
        <label>Handle Only Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Line_Separator__c</fullName>
        <defaultValue>&quot;\r\n&quot;</defaultValue>
        <label>Line Separator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Cancellation_Period__c</fullName>
        <label>Loan Cancellation Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Loan_ID_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <label>Loan ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Lock_Period_for_Bank_Recon__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lock Period for Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Skip_Bank_Account_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Bank Account Verification</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Statement Configuration</label>
</CustomObject>